# opman

./: .gitignore  .vscodeenv  Cargo.toml
.github/workflows/: publish.yml
ci/opman-git/: PKGBUILD  PKGBUILD.template  generate-pkgbuild.sh
libopman/: Cargo.toml
libopman/src/: database.rs  lib.rs  package.rs  package_ops.rs
libopman/src/database/: aur.rs
libopman/src/package/: aur_package.rs
libopman_derive/: Cargo.toml
src/: database.rs  display.rs  error.rs  main.rs  ops.rs  package.rs  package_ops.rs
src/database/: aur.rs  pacman.rs
src/package/: alpm_package.rs
