[package]
name = "opman"
version = "0.0.1"
edition = "2021"

[dependencies]
libopman = { path = "./libopman", version = "0.1.0" }
libopman_derive = { path = "./libopman_derive", version = "0.1.0" }
alpm = "2.2.1"
bytesize = "1.1.0"
chrono = "0.4.19"
clap = { version = "4.0.12", features = ["derive"] }
fern = {version = "0.6.0", features = ["colored"]}
log = "0.4.16"
pbr = "1.0.4"
